Changed to slightly different structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,7 +80,7 @@ set(VOCODER_SOURCES
   ${PROJECT_SOURCE_DIR}/PhaseVocoder.cpp
   ${PROJECT_SOURCE_DIR}/ClassicVocoder.cpp
   ${PROJECT_SOURCE_DIR}/BidirectionalVocoder.cpp
-  ${PROJECT_SOURCE_DIR}/TransportVocoder.cpp
+  #${PROJECT_SOURCE_DIR}/TransportVocoder.cpp
   ${PROJECT_SOURCE_DIR}/BidirectionalTransportVocoder.cpp
   #${PROJECT_SOURCE_DIR}/Transport.cpp
 )
@@ -101,5 +101,5 @@ set(LIBS ${LIBS} ${PROJECT_NAME})
 
 MAKE_TEST(ClassicVocoderTest)
 MAKE_TEST(BidirectionalVocoderTest)
-MAKE_TEST(TransportVocoderTest)
+#MAKE_TEST(TransportVocoderTest)
 MAKE_TEST(BidirectionalTransportVocoderTest)
